YI-37: button link hover fix, spacing fix

--- a/web/themes/custom/yale_infosec/components/01-atoms/buttons/_1-button-variations.scss
+++ b/web/themes/custom/yale_infosec/components/01-atoms/buttons/_1-button-variations.scss
@@ -12,7 +12,11 @@
   padding: 1.4rem $space;
   text-decoration: none;
   text-align: center;
-  transition: all 0.15s
+  transition: all 0.15s;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 // Button color variations
